plugins {
    id 'java'
}

group 'co.selim'
version '0.9.1'

sourceCompatibility = JavaVersion.VERSION_1_8

repositories {
    mavenCentral()
}

dependencies {
    implementation "com.google.code.gson:gson:2.8.5"
    implementation "org.slf4j:slf4j-api:1.7.25"
    testImplementation group: 'junit', name: 'junit', version: '4.12'
}
